correções nas anottations do estado
